<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:background="@drawable/sign_in"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/imglogo"
            android:background="@drawable/logotext"
            android:layout_marginBottom="100dp"
            android:layout_marginRight="18dp"
            android:layout_marginLeft="18dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/logo" />

        <TextView
            android:textAlignment="center"
            android:layout_below="@+id/imglogo"
            android:id="@+id/tvSilahkan"
            android:text="@string/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/etUsername"
            android:hint="@string/username"
            android:textAlignment="center"
            android:drawableStart="@drawable/ic_person"
            android:layout_marginTop="50dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/tvSilahkan"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/username"
            android:inputType="text" />

        <EditText
            android:id="@+id/etPassword"
            android:hint="@string/password"
            android:textAlignment="center"
            android:drawableStart="@drawable/ic_password"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/etUsername"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etPassword"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:background="@drawable/btn_sign_in"
            android:foreground="@drawable/btn_sign_in" />

        <TextView
            android:id="@+id/tvCreateAccount"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/btnLogin"
            android:textAlignment="center"
            android:text="@string/create_a_new_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

</LinearLayout>